Basic user functions ready auth/login/logout

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=backend
+spotify.client.id=91ddea6e79fa40aba0db68d230e85626
+spotify.client.secret=50010ded0492411d8bebb4a2a9fb8c05
+spotify.redirect.uri=http://localhost:8080/auth/spotify/callback
